# mindspore

mindspore/ccsrc/: CMakeLists.txt
mindspore/ccsrc/plugin/device/cpu/mluop/: CMakeLists.txt  matmul_mlu_kernel.h  matmul_mlu_kernel.mlu
mlu370/mindspore/resnet50/: downloadC10.py  output.txt  resnet50_c10.py  run.sh
mlu370/mindspore/resnet50/src/: dataset.py
mlu370/mindspore/scripts/: run_resnet50.sh  run_yolov5.sh
mlu370/mindspore/yolov5/: default_config.yaml  eval.py  eval_onnx.py  export.py  log.txt  run_eval.sh  train.py
mlu370/mindspore/yolov5/model_utils/: moxing_adapter.py
mlu370/mindspore/yolov5/modelarts/: train_start.py
mlu370/mindspore/yolov5/scripts/: run_distribute_eval.sh  run_eval.sh  run_standalone_train.sh  run_standalone_train_gpu.sh
mlu370/mindspore/yolov5/src/: initializer.py  util.py  yolo.py
mlu370/torch/scripts/: run_yolov5.sh
mlu370/torch/yolov5/: benchmarks.py  detect.py  export.py  hubconf.py  run_eval.sh  train.py  val.py
mlu370/torch/yolov5/classify/: predict.py  train.py  val.py
mlu370/torch/yolov5/models/: common.py  experimental.py  tf.py  yolo.py
mlu370/torch/yolov5/segment/: predict.py  train.py  val.py
mlu370/torch/yolov5/utils/: activations.py  augmentations.py  autoanchor.py  autobatch.py  dataloaders.py  downloads.py  general.py  loss.py  metrics.py  plots.py  torch_utils.py  triton.py
mlu370/torch/yolov5/utils/aws/: resume.py
mlu370/torch/yolov5/utils/flask_rest_api/: restapi.py
mlu370/torch/yolov5/utils/loggers/: __init__.py
mlu370/torch/yolov5/utils/segment/: dataloaders.py  general.py  loss.py  plots.py
(+2 files in other folders)
